--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="shortcut icon" href="./assets/dumbbell-regular-24.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/news-solid-24.png" type="image/x-icon">
     <title>Sky News</title>
 </head>
 <body>
